--- a/_posts/2017-11-07-mit-6.00cs.md
+++ b/_posts/2017-11-07-mit-6.00cs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "MIT 6.00CS 1"
+title:  "MIT 6.00CS Lecture 1: INTRODUCTION TO 6.00 "
 date:   2017-11-07 23:00:00 +0900
 categories: MIT
 ---
