--- a/_posts/2017-11-14-mit-6.00cs.md
+++ b/_posts/2017-11-14-mit-6.00cs.md
@@ -5,6 +5,8 @@ date:   2017-11-14 11:00:00 +0900
 categories: MIT
 ---
 
+# Topics covered
+ - Topics covered: IDLE, types of objects, operators, overloading, commands, variables, assignment, input, straight line and branching programs, looping constructs, Turing completeness, conditionals, nesting.
 # IDLE
 
 ### What is IDLE?
