--- a/_posts/2017-11-14-mit-6.00cs.md
+++ b/_posts/2017-11-14-mit-6.00cs.md
@@ -96,4 +96,4 @@ categories: MIT
 
 # TODO
 
-- [ ] *[Problem Sets](https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-00sc-introduction-to-computer-science-and-programming-spring-2011/unit-1/lecture-2-core-elements-of-a-program/MIT6_00SCS11_ps0.pdf)
+- [-] [Problem Sets](https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-00sc-introduction-to-computer-science-and-programming-spring-2011/unit-1/lecture-2-core-elements-of-a-program/MIT6_00SCS11_ps0.pdf)
