--- a/_posts/metal/2019-04-30-metal-3.md
+++ b/_posts/metal/2019-04-30-metal-3.md
@@ -9,10 +9,59 @@ tag: [Metal]
 
 > [link](https://developer.apple.com/library/archive/documentation/Miscellaneous/Conceptual/MetalProgrammingGuide/Prog-Func/Prog-Func.html)
 
-- `MTLFunction` Represents a Shader or Compute Function
-- A `MTLFunction` object represents a single function that is written in the Metal shading language and executed on the GPU as part of a graphics or compute pipeline. 
+## `MTLFunction` Represents a Shader or Compute Function
+
+> A `MTLFunction` object represents a single function that is written in the Metal shading language and executed on the GPU as part of a graphics or compute pipeline. 
+
+```swift
+defaultLibrary.makeFunction(name: "vertexPassThrough")
+```
+
+- To pass data or state between the Metal runtime and a graphics or compute function written in the Metal shading language, you assign an argument index for textures, buffers, and samplers. 
+    - The argument index identifies which texture, buffer, or sampler is being referenced by both the Metal runtime and Metal shading code.
+
+- **For a rendering pass**, you specify a `MTLFunction` object for use as a vertex or fragment shader in a `MTLRenderPipelineDescriptor` object, as detailed in Creating a Render Pipeline State.
+- **For a compute pass**, you specify a `MTLFunction` object when creating a `MTLComputePipelineState` object for a target device, as described in Specify a Compute State and Resources for a Compute Command Encoder.
+
 
 ## A Library Is a Repository of Functions
 
-> A MTLLibrary object represents a repository of one or more MTLFunction objects. A single MTLFunction object represents one Metal function that has been written with the shading language. In the Metal shading language source code, any function that uses a Metal function qualifier (vertex, fragment, or kernel) can be represented by a MTLFunction object in a library. A Metal function without one of these function qualifiers cannot be directly represented by a MTLFunction object, although it can called by another function within the shader.
+- A MTLLibrary object represents a repository of one or more MTLFunction objects. A single MTLFunction object represents one Metal function that has been written with the shading language. 
+- In the Metal shading language source code, any function that uses a **Metal function qualifier** (`vertex`, `fragment`, or `kernel`) can be represented by a `MTLFunction` object in a library. 
+- A Metal function without one of these function qualifiers cannot be directly represented by a `MTLFunction` object, although it can called by another function within the shader.
 
+
+- The MTLFunction objects in a library can be created from either of these sources:
+    - Metal shading language code that was compiled into a binary library format during the app build process.
+    - A text string containing Metal shading language source code that is compiled by the app at runtime.
+
+### Creating a Library from Compiled Code
+
+- For the best performance, compile your Metal shading language source code into a library file during your app's build process in Xcode, which avoids the costs of compiling function source during the runtime of your app. 
+- To create a MTLLibrary object from a library binary, call one of the following methods of MTLDevice:
+    - newDefaultLibrary retrieves a library built for the main bundle that contains all shader and compute functions in an app’s Xcode project.
+    - newLibraryWithFile:error: takes the path to a library file and returns a MTLLibrary object that contains all the functions stored in that library file.
+    - newLibraryWithData:error: takes a binary blob containing code for the functions in a library and returns a MTLLibrary object.
+
+### Creating a Library from Source Code
+
+- To create a MTLLibrary from a string of Metal shading language source code that may contain several functions, call one of the following methods of MTLDevice.
+- These methods compile the source code when the library is created. To specify the compiler options to use, set the properties in a MTLCompileOptions object.
+    - `newLibraryWithSource:options:error:` synchronously compiles source code from the input string to create MTLFunction objects and then returns a MTLLibrary object that contains them.
+    - `newLibraryWithSource:options:completionHandler:` asynchronously compiles source code from the input string to create MTLFunction objects and then returns a MTLLibrary object that contains them. completionHandler is a block of code that is invoked when object creation is completed.
+
+### Getting a Function from a Library
+
+- The `newFunctionWithName:` method of MTLLibrary returns a MTLFunction object with the requested name. If the name of a function that uses a Metal shading language function qualifier is not found in the library, then newFunctionWithName: returns nil.
+
+```swift
+defaultLibrary.makeFunction(name: "vertexPassThrough")
+```
+
+### Determining Function Details at Runtime
+
+- Because the actual contents of a `MTLFunction` object are defined by a graphics shader or compute function that may be compiled before the MTLFunction object was created, its source code might not be directly available to the app. You can query the following MTLFunction properties at run time:
+
+- `name`, a string with the name of the function.
+- `functionType`, which indicates whether the function is declared as a vertex, fragment, or compute function.
+- `vertexAttributes`, an array of MTLVertexAttribute objects that describe how vertex attribute data is organized in memory and how it is mapped to vertex function arguments.
