--- a/_posts/programming/2018-09-09-vim.md
+++ b/_posts/programming/2018-09-09-vim.md
@@ -75,3 +75,12 @@ paste from the clipboard :r !pbpaste
 - `g#` same as g* but in backward direction.
 - `gg` goes to the first line in the buffer (or provide a count before the command for a specific line).
 - `G` goes to the last line (or provide a count before the command for a specific line).
+
+
+---
+
+- `Ctrl+W`, `S` (upper case) for horizontal splitting
+- `Ctrl+W`, `v` (lower case) for vertical splitting
+- `Ctrl+W`, `Q` to close one
+- `Ctrl+W`, `Ctrl+W `to switch between windows
+- `Ctrl+W`, `J` (xor `K`, `H`, `L`) to switch to adjacent window (intuitively up, down, left, right)
