--- a/_posts/ios/2018-08-29-ios-tips.md
+++ b/_posts/ios/2018-08-29-ios-tips.md
@@ -9,7 +9,7 @@ description: iOS Tips
 
 # Dynamically change UITableView Footer or Header TextLabel
 
-```
+```swift
 tableView.headerView(forSection: 0)?.textLabel?.text = "\(dataSource[row])"
 tableView.footerView(forSection: 0)?.textLabel?.text = "\(dataSource[row])"
 ```
@@ -18,7 +18,7 @@ tableView.footerView(forSection: 0)?.textLabel?.text = "\(dataSource[row])"
 
 # Swift Singleton pattern
 
-```
+```swift
 class SettingManager {
     static let shared = SettingManager()
     private init() { }
@@ -32,7 +32,7 @@ SettingManager.shared
 ```
 # iOS UUID
 
-```
+```swift
 UIDevice.currentDevice().identifierForVendor.UUIDString
 ```
 
@@ -51,7 +51,7 @@ UIDevice.currentDevice().identifierForVendor.UUIDString
 
 # Hide Statusbar in View Controller 2
 
-```
+```swift
 override var prefersStatusBarHidden: Bool {
     return true
 }
@@ -59,7 +59,7 @@ override var prefersStatusBarHidden: Bool {
 
 # haptic feedback
 
-```
+```swift
 
 // class UINotificationFeedbackGenerator
 let notificationFeedback = UINotificationFeedbackGenerator()
